--- a/index.html
+++ b/index.html
@@ -1,59 +1,77 @@
-<!doctype html>
-<html lang="en-US">
-
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <!-- Required meta tags -->
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-
-  <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-
-  <!-- <link rel="stylesheet" href="css/bootstrap.css"> -->
-  <link rel="stylesheet" href="css/site.css">
-
-  <title>2 Style Rescue</title>
-
-
+    <meta charset="utf-8" />
+    <title>2 Style Rescue</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- CSS -->
+    <link rel="stylesheet" href="css/site.css" />
+    <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+    <link href="css/custom.css" rel="stylesheet" type="text/css" />
+ 
 </head>
-
 <body>
 
 
-<!-- <div class="container-fluid"> -->
-  <nav class="navbar navbar-expand-lg fixed-top" id="navbar-brand">
-    <div class="container-fluid" id = "nav-bar-container">
-      <a class="navbar-brand px-5" href="index.html">
-        <img src="Assests/pictures/TempLogo.jpg" class = "rounded-circle border border-dark" alt="" width="90" height="72">
-        <!-- 2 Styles Rescue -->
+<!--Navbar Start-->
+<nav class="navbar navbar-expand-lg fixed-top navbar-kleo normal-nav">
+  <div class="container">
+      <a class="navbar-brand logo" href="">
+          <img src="../2StylesRescue/Assests/pictures/TempLogo.png" class = "rounded-circle border border-dark" height="60">
       </a>
-        <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse " id="navbarSupportedContent">     <ul class="navbar-nav mr-4">
-          <li class="nav-item">
-            <a class="nav-link" id="nav-bar-link" href="AboutUs.html">ABOUT US</a>        </li>  
-         <li class="nav-item">
-          <a class="nav-link" id="nav-bar-link" href="applications.html">APPLICATIONS</a>   
-          </li>
-          <li class="nav-item"> 
-            <a class="nav-link" id="nav-bar-link" href="rescues.html">RESCUES</a>         </li>   
-         <li class="nav-item">  
-            <a class="nav-link" id="nav-bar-link" href="FAQ.html">FAQ</a>       </li>  
-         <li class="nav-item"> 
-          <a class="nav-link" id="nav-bar-link" href="dontations.html">DONATIONS</a>       </li> 
-          <li class="nav-item"> 
-            <a class="nav-link" id="nav-bar-link" href="blog.html">BLOG</a>      </li> 
-          <li class="nav-item"> 
-            <a class="nav-link" id="nav-bar-link" href="contact.html">CONTACT</a>       </li> 
-         </ul> 
-         </div>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <i class="fas fa-bars"></i>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav ml-auto navbar-center" id="mySidenav">
+              <li class="nav-item active">
+                  <a href="#top" class="nav-link">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" id="nav-bar-link" href="AboutUs.html">ABOUT US</a>        </li>  
+             <li class="nav-item">
+              <a class="nav-link" id="nav-bar-link" href="applications.html">APPLICATIONS</a>   
+              </li>
+              <li class="nav-item"> 
+                <a class="nav-link" id="nav-bar-link" href="rescues.html">RESCUES</a>         </li>   
+             <li class="nav-item">  
+                <a class="nav-link" id="nav-bar-link" href="FAQ.html">FAQ</a>       </li>  
+             <li class="nav-item"> 
+              <a class="nav-link" id="nav-bar-link" href="dontations.html">DONATIONS</a>       </li> 
+              <li class="nav-item"> 
+                <a class="nav-link" id="nav-bar-link" href="blog.html">BLOG</a>      </li> 
+              <li class="nav-item"> 
+                <a class="nav-link" id="nav-bar-link" href="contact.html">CONTACT</a>       </li> 
+              </li>
+          </ul>
+      </div>
+  </div>
 </nav>
+<!-- Navbar End -->
 
-<header class="header">
+<!-- Header Start -->
+<section class="header-bg align-items-center position-relative d-flex" id="top">
+  <div class="container">
+      <div class="row align-items-center">
+          <div class="col-lg-6">
+              <div class="header-title">
+                  <h1 class="font-weight-bold main-title mb-4">2 Styles Rescue</h1>
+                  <p class="text-sub ml-2 mb-4 pb-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+                  <a href="" class="btn btn-primary ml-2">Learn More <span class="ml-2 right-icon"><i class="fas fa-arrow-right"></i></span></a>
+              </div>
+          </div>
+          <!-- <div class="col-lg-5 offset-lg-1">
+              <div class="mt-5 mt-lg-0">
+                  <img src="../2StylesRescue/Assests/pictures/home_banner.png" alt="" class="img-fluid mx-auto d-block">
+              </div> -->
+          </div>
+      </div>
+  </div>
+</section>
+<!-- Header End -->
+
+
+<!-- <header class="header">
   <div class="overlay"></div>
    <div class="container">
       <div class="description ">
@@ -64,7 +82,7 @@
     </div>
    </div>
   
-</header>
+</header> -->
 
 
 
@@ -74,12 +92,42 @@
     <h1 class="display-3 text-white"><span id="lives-saved-banner-number">0 </span> Lives Saved to Date</h1>
   </div>
 
+
+<!-- About Start -->
+<section class="section bg-grey" id="about">
   <div class="container">
+      <div class="row justify-content-center">
+          <div class="col-lg-6 col-md-8">
+              <div class="text-center mb-5">
+                  <h2 class="highlight header-colorize text-uppercase mb-3">About Us</h2>
+                  <p class="text-sub size-14">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+              </div>
+          </div>
+      </div>
+      <div class="row align-items-center">
+          <div class="col-lg-5">
+              <img src="../2StylesRescue/Assests/pictures/donkey.jpg" alt="" class="img-fluid mx-auto d-block">
+          </div>
+          <div class="col-lg-6 offset-lg-1">
+              <div class="text-sub mt-5 mt-lg-0">
+                  <h3 class="title font-weight-medium mb-4">Mini Horse Rescue</h3>
+                  <p class="mb-4 size-15">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi.</p>
+                  <p class="mb-4 size-15">Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</p>
+                  <a href="" class="learn-more size-15">Learn more <span class="ml-2 right-icon"><i class="fas fa-arrow-right"></i></span></a>
+              </div>
+          </div>
+      </div>
+  </div>
+</section>
+<!-- About End -->
+
+
+  <!-- <div class="container">
 <div class="about">
   <div class="row">
     <div class="col-lg-4 col-md-4 col-sm-12">
      <img src="../2StylesRescue/Assests/pictures/AdobeStock_163052224.jpeg" class="img-fluid">
-     <span class="text-justify"><h1>About the Rescue</h1></span>
+     <span class="text-center"><h1>About the Rescue</h1></span>
     </div>
     <div class="col-lg-8 col-md-8 col-sm-12 desc">
       
@@ -114,10 +162,10 @@
        </div>
       <div class="col-lg-4 col-md-4 col-sm-12">
        <img src="../2StylesRescue/Assests/pictures/AdobeStock_162786408.jpeg" class="img-fluid">
-       <span class="text-justify"><h1>Adoptions</h1></span>
+       <span class="text-center"><h1>Adoptions</h1></span>
       </div>
      </div>
-    </div>
+    </div> -->
 
 
   <!-- GET /instagram_oembed?url={url}&access_token={access-token} -->
@@ -163,12 +211,24 @@
   </div>
 </section>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
-    crossorigin="anonymous"></script>
 
-    <script type="text/javascript" src='script.js'></script>
 
+
+
+
+
+
+
+
+    <!-- JS -->
+    <script src="js/jquery.min.js"></script>
+    <script src="js/bootstrap.bundle.min.js"></script>
+    <script src="js/scrollspy.min.js"></script>
+    <script src="js/jquery.easing.min.js"></script>
+    <script src="js/script.js"></script>
 </body>
-
 </html>
+
+
+
+
